--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header (viewChange)="viewChanged"></app-header>
+<app-header (viewChanged)="viewId = $event"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
@@ -7,3 +7,4 @@
     </div>
   </div>
 </div>
+p
