--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes *ngIf="viewId == 'recipes'"></app-recipes>
-      <app-shopping-list *ngIf="viewId == 'shopping-list'"></app-shopping-list>
+      <app-recipes *ngIf="viewId === 'recipes'"></app-recipes>
+      <app-shopping-list *ngIf="viewId === 'shopping-list'"></app-shopping-list>
     </div>
   </div>
 </div>
