--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,7 +8,7 @@
   <div class="col-xs-12">
     <app-recipe-item *ngFor="let recipe of recipes"
                      [recipe]="recipe"
-    (recipeClicked)="onRecipeSelected($event)">
+    (recipeClicked)="onRecipeSelected(recipe)">
     </app-recipe-item>
   </div>
 </div>
