--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -3,7 +3,7 @@
     <img [src]="recipe.imagePath"
          [alt]="recipe.name"
          class="img-responsive"
-    style="max-height: 300px">
+         style="max-height: 300px">
   </div>
 </div>
 <div class="row">
@@ -29,11 +29,17 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    {{recipe.description}}
+    <p>
+      {{recipe.description}}
+    </p>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ingredient.name}} ({{ingredient.amount}})
+      </li>
+    </ul>
   </div>
 </div>
