--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,3 +1,5 @@
+<div *ngIf="!recipe"><p>Please select a recipe.</p></div>
+<div *ngIf="recipe">
 <div class="row">
   <div class="col-xs-12">
     <img [src]="recipe.imagePath"
@@ -42,4 +44,5 @@
       </li>
     </ul>
   </div>
+</div>
 </div>
