--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,7 +1,7 @@
 <a
   style="cursor: pointer;"
   class="list-group-item clearfix"
-  (click)="onRecipeClicked()"
+  [routerLink]="['/recipes', recipe.name]"
 >
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
