--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,6 +8,6 @@
   <div class="col-xs-12">
     <app-recipe-item *ngFor="let recipe of recipes; let i = index"
                      [recipe]="recipe"
-                     [id]="i"></app-recipe-item>
+                     [index]="i"></app-recipe-item>
   </div>
 </div>
