--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -29,7 +29,10 @@
             {{editMode ? 'Update' : 'Add'}}
           </button>
           <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button class="btn btn-primary"
+                  type="button"
+                  (click)="clearForm()">Clear
+          </button>
         </div>
       </div>
     </form>
