--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -28,7 +28,11 @@
                   [disabled]="!f.valid">
             {{editMode ? 'Update' : 'Add'}}
           </button>
-          <button class="btn btn-danger" type="button">Delete</button>
+          <button class="btn btn-danger"
+                  type="button"
+                  [disabled]="!editMode"
+                  (click)="deleteIngredient()">Delete
+          </button>
           <button class="btn btn-primary"
                   type="button"
                   (click)="clearForm()">Clear
