--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
           <button type="submit" class="btn btn-success">Save</button>
@@ -13,6 +13,7 @@
             <label for="name">Name</label>
             <input type="text"
                    id="name"
+                   formControlName="name"
                    class="form-control">
           </div>
         </div>
@@ -23,6 +24,7 @@
             <label for="imagePath">Image path</label>
             <input type="text"
                    id="imagePath"
+                   formControlName="imagePath"
                    class="form-control">
           </div>
         </div>
@@ -39,6 +41,7 @@
             <textarea
               id="description"
               class="form-control"
+              formControlName="description"
               rows="6">
             </textarea>
           </div>
