--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -31,7 +31,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" class="img-responsive">
+          <img [src]="recipeForm.value.imagePath" class="img-responsive">
         </div>
       </div>
       <div class="row">
