--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -48,18 +48,30 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12">
-          <div class="row">
+        <div class="col-xs-12" formArrayName="ingredients">
+          <div class="row"
+               *ngFor="let ingredientControl of recipeForm.get('ingredients').controls; let i = index"
+               [formGroupName]="i"
+          style="margin-top: 10px;">
             <div class="col-xs-9">
               <input type="text"
-                     class="form-control">
+                     class="form-control"
+                     formControlName="name">
             </div>
             <div class="col-xs-2">
               <input type="text"
-                     class="form-control">
+                     class="form-control"
+                     formControlName="amount">
             </div>
             <div class="col-xs-1">
               <button class="btn btn-danger">&times;</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-xs-12">
+              <button type="button" class="btn btn-success"
+              (click)="onAddIngredient()">Add Ingredient</button>
             </div>
           </div>
         </div>
