--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,7 +3,9 @@
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success">Save</button>
+          <button type="submit" class="btn btn-success"
+                  [disabled]="!recipeForm.valid">Save
+          </button>
           <button type="button" class="btn btn-danger">Cancel</button>
         </div>
       </div>
@@ -52,7 +54,7 @@
           <div class="row"
                *ngFor="let ingredientControl of recipeForm.get('ingredients').controls; let i = index"
                [formGroupName]="i"
-          style="margin-top: 10px;">
+               style="margin-top: 10px;">
             <div class="col-xs-9">
               <input type="text"
                      class="form-control"
@@ -71,7 +73,8 @@
           <div class="row">
             <div class="col-xs-12">
               <button type="button" class="btn btn-success"
-              (click)="onAddIngredient()">Add Ingredient</button>
+                      (click)="onAddIngredient()">Add Ingredient
+              </button>
             </div>
           </div>
         </div>
