--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -6,7 +6,10 @@
           <button type="submit" class="btn btn-success"
                   [disabled]="!recipeForm.valid">Save
           </button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button type="button" class="btn btn-danger"
+                  routerLink=".."
+          >Cancel
+          </button>
         </div>
       </div>
       <div class="row">
