--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -12,7 +12,7 @@
         <img
           [src]="recipe.imagePath"
           alt="{{ recipe.name }}"
-          class="img-responsive"
+          class="img-responsive img-thumbnail"
           style="max-height: 50px;">
       </span>
 </a>
