--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -69,7 +69,7 @@
                      formControlName="amount">
             </div>
             <div class="col-xs-1">
-              <button class="btn btn-danger">&times;</button>
+              <button type="button" class="btn btn-danger" (click)="removeIngredient(i)">&times;</button>
             </div>
           </div>
           <hr>
